{
  "version": 4,
  "terraform_version": "0.12.17",
  "serial": 40,
  "lineage": "2da0f691-9599-5705-f250-3b9746c85ce0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "sonarelb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:536285340728:loadbalancer/tf-lb-20191204155902903700000001",
            "availability_zones": [
              "us-east-1a",
              "us-east-1b"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "tf-lb-20191204155902903700000001-782232084.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "TCP:80",
                "timeout": 2,
                "unhealthy_threshold": 2
              }
            ],
            "id": "tf-lb-20191204155902903700000001",
            "idle_timeout": 60,
            "instances": [
              "i-00f66a3c8c1823c57",
              "i-0c3c4294b4f5a1707"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "tcp",
                "lb_port": 80,
                "lb_protocol": "tcp"
              },
              {
                "instance_port": 9000,
                "instance_protocol": "tcp",
                "lb_port": 9000,
                "lb_protocol": "tcp"
              }
            ],
            "name": "tf-lb-20191204155902903700000001",
            "security_groups": [
              "sg-0ac46bb4320fd8d86"
            ],
            "source_security_group": "536285340728/terraform-20191204142939082000000001",
            "source_security_group_id": "sg-0ac46bb4320fd8d86",
            "subnets": [
              "subnet-00633da58827c0bc4",
              "subnet-0451f1b00fbf233ee"
            ],
            "tags": {
              "Name": "sonar-elb"
            },
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_instance.sonar",
            "aws_security_group.sonarsg",
            "aws_subnet.sonar"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "sonar",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00d4e9ff62bc40e03",
            "arn": "arn:aws:ec2:us-east-1:536285340728:instance/i-0c3c4294b4f5a1707",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0c3c4294b4f5a1707",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "prasanna",
            "monitoring": false,
            "primary_network_interface_id": "eni-0936316f819ab1ccb",
            "private_dns": "ip-10-20-1-13.ec2.internal",
            "private_ip": "10.20.1.13",
            "public_dns": "ec2-35-175-229-63.compute-1.amazonaws.com",
            "public_ip": "35.175.229.63",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0cbd4140da45e8d38",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0ac46bb4320fd8d86"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00633da58827c0bc4",
            "tags": {
              "Name": "Sonar-0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ac46bb4320fd8d86"
            ]
          },
          "dependencies": [
            "aws_security_group.sonarsg",
            "aws_subnet.sonar"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00d4e9ff62bc40e03",
            "arn": "arn:aws:ec2:us-east-1:536285340728:instance/i-00f66a3c8c1823c57",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-00f66a3c8c1823c57",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "prasanna",
            "monitoring": false,
            "primary_network_interface_id": "eni-037e25c2f66a37692",
            "private_dns": "ip-10-20-2-5.ec2.internal",
            "private_ip": "10.20.2.5",
            "public_dns": "ec2-100-26-3-154.compute-1.amazonaws.com",
            "public_ip": "100.26.3.154",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-037f887797dff35f5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0ac46bb4320fd8d86"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0451f1b00fbf233ee",
            "tags": {
              "Name": "Sonar-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ac46bb4320fd8d86"
            ]
          },
          "dependencies": [
            "aws_security_group.sonarsg",
            "aws_subnet.sonar"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "sonar_igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-07b7b4cfc29a57f71",
            "owner_id": "536285340728",
            "tags": {
              "Name": "sonar"
            },
            "vpc_id": "vpc-0771930b92cbc038a"
          },
          "dependencies": [
            "aws_vpc.sonar_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "sonar",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-09c4b3f7caf94c5ab",
            "owner_id": "536285340728",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07b7b4cfc29a57f71",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main"
            },
            "vpc_id": "vpc-0771930b92cbc038a"
          },
          "dependencies": [
            "aws_internet_gateway.sonar_igw",
            "aws_vpc.sonar_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sonarsg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:536285340728:security-group/sg-0ac46bb4320fd8d86",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ac46bb4320fd8d86",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9000
              }
            ],
            "name": "terraform-20191204142939082000000001",
            "name_prefix": null,
            "owner_id": "536285340728",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sonarsg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0771930b92cbc038a"
          },
          "dependencies": [
            "aws_vpc.sonar_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sonar",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:536285340728:subnet/subnet-00633da58827c0bc4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.20.1.0/28",
            "id": "subnet-00633da58827c0bc4",
            "map_public_ip_on_launch": true,
            "owner_id": "536285340728",
            "tags": {
              "Name": "sonar-0"
            },
            "vpc_id": "vpc-0771930b92cbc038a"
          },
          "dependencies": [
            "aws_vpc.sonar_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:536285340728:subnet/subnet-0451f1b00fbf233ee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.20.2.0/28",
            "id": "subnet-0451f1b00fbf233ee",
            "map_public_ip_on_launch": true,
            "owner_id": "536285340728",
            "tags": {
              "Name": "sonar-1"
            },
            "vpc_id": "vpc-0771930b92cbc038a"
          },
          "dependencies": [
            "aws_vpc.sonar_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "sonar_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:536285340728:vpc/vpc-0771930b92cbc038a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-0aa74531eaaa1c61e",
            "default_route_table_id": "rtb-0e607004b3a4016b1",
            "default_security_group_id": "sg-03a67eee17598f4f1",
            "dhcp_options_id": "dopt-1ed7e366",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0771930b92cbc038a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0e607004b3a4016b1",
            "owner_id": "536285340728",
            "tags": {
              "Name": "sonar"
            }
          }
        }
      ]
    }
  ]
}